--- a/grails-app/i18n/messages_da.properties
+++ b/grails-app/i18n/messages_da.properties
@@ -53,4 +53,7 @@ typeMismatch.java.lang.Long=Feltet {0} skal være et valid tal
 typeMismatch.java.lang.Short=Feltet {0} skal være et valid tal
 typeMismatch.java.math.BigDecimal=Feltet {0} skal være et valid tal
 typeMismatch.java.math.BigInteger=Feltet {0} skal være et valid tal
+depEstado.label=Create property
+tipoDenuncia.label=Create property
+default.link.skip.label=Create property
 
