--- a/grails-app/i18n/messages_it.properties
+++ b/grails-app/i18n/messages_it.properties
@@ -53,3 +53,6 @@ typeMismatch.java.lang.Long=La proprietà {0} deve essere un numero valido
 typeMismatch.java.lang.Short=La proprietà {0} deve essere un numero valido
 typeMismatch.java.math.BigDecimal=La proprietà {0} deve essere un numero valido
 typeMismatch.java.math.BigInteger=La proprietà {0} deve essere un numero valido
+depEstado.label=Create property
+tipoDenuncia.label=Create property
+default.link.skip.label=Create property
