--- a/grails-app/i18n/messages_pt_BR.properties
+++ b/grails-app/i18n/messages_pt_BR.properties
@@ -57,3 +57,6 @@ typeMismatch.java.lang.Long=O campo {0} deve ser um número válido.
 typeMismatch.java.lang.Short=O campo {0} deve ser um número válido.
 typeMismatch.java.math.BigDecimal=O campo {0} deve ser um número válido.
 typeMismatch.java.math.BigInteger=O campo {0} deve ser um número válido.
+depEstado.label=Create property
+tipoDenuncia.label=Create property
+default.link.skip.label=Create property
