--- a/grails-app/i18n/messages_sk.properties
+++ b/grails-app/i18n/messages_sk.properties
@@ -54,3 +54,6 @@ typeMismatch.java.lang.Short=Položka {0} musí byť celé číslo
 typeMismatch.java.math.BigDecimal=Položka {0} musí byť desatinné číslo
 typeMismatch.java.math.BigInteger=Položka {0} musí byť celé číslo
 typeMismatch=Položka {0} má nezhodný typ
+depEstado.label=Create property
+tipoDenuncia.label=Create property
+default.link.skip.label=Create property
