Tipo Sujeto - Listo hasta post
Sujeto - Otros cambios (No funciona)

--- a/grails-app/i18n/messages_pt_BR.properties
+++ b/grails-app/i18n/messages_pt_BR.properties
@@ -57,3 +57,7 @@ typeMismatch.java.lang.Long=O campo {0} deve ser um número válido.
 typeMismatch.java.lang.Short=O campo {0} deve ser um número válido.
 typeMismatch.java.math.BigDecimal=O campo {0} deve ser um número válido.
 typeMismatch.java.math.BigInteger=O campo {0} deve ser um número válido.
+tipoDenuncia.label=Create property
+tipoSujeto.label=Create property
+default.link.skip.label=Create property
+sujeto.label=Create property
