--- a/grails-app/i18n/messages_sv.properties
+++ b/grails-app/i18n/messages_sv.properties
@@ -53,3 +53,7 @@ typeMismatch.java.lang.Long=Värdet {0} måste vara ett giltigt heltal
 typeMismatch.java.lang.Short=Värdet {0} måste vara ett giltigt heltal
 typeMismatch.java.math.BigDecimal=Värdet {0} måste vara ett giltigt nummer
 typeMismatch.java.math.BigInteger=Värdet {0} måste vara ett giltigt heltal
+tipoDenuncia.label=Create property
+tipoSujeto.label=Create property
+default.link.skip.label=Create property
+sujeto.label=Create property
