--- a/grails-app/i18n/messages_th.properties
+++ b/grails-app/i18n/messages_th.properties
@@ -53,3 +53,7 @@ typeMismatch.java.lang.Long=คุณสมบัติ '{0}' จะต้อง
 typeMismatch.java.lang.Short=คุณสมบัติ '{0}' จะต้องมีค่าเป็นจำนวนประเภท Short
 typeMismatch.java.math.BigDecimal=คุณสมบัติ '{0}' จะต้องมีค่าเป็นจำนวนประเภท BigDecimal
 typeMismatch.java.math.BigInteger=คุณสมบัติ '{0}' จะต้องมีค่าเป็นจำนวนประเภท BigInteger
+tipoDenuncia.label=Create property
+tipoSujeto.label=Create property
+default.link.skip.label=Create property
+sujeto.label=Create property
