--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -54,3 +54,7 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
+tipoDenuncia.label=Create property
+tipoSujeto.label=Create property
+default.link.skip.label=Create property
+sujeto.label=Create property
