--- a/grails-app/i18n/messages_cs.properties
+++ b/grails-app/i18n/messages_cs.properties
@@ -53,3 +53,7 @@ typeMismatch.java.lang.Long=Položka {0} musí být validní číslo
 typeMismatch.java.lang.Short=Položka {0} musí být validní číslo
 typeMismatch.java.math.BigDecimal=Položka {0} musí být validní číslo
 typeMismatch.java.math.BigInteger=Položka {0} musí být validní číslo
+tipoDenuncia.label=Create property
+tipoSujeto.label=Create property
+default.link.skip.label=Create property
+sujeto.label=Create property
