--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -17,3 +17,7 @@ default.not.unique.message=La propriété [{0}] de la classe [{1}] avec la valeu
 
 default.paginate.prev=Précédent
 default.paginate.next=Suivant
+tipoDenuncia.label=Create property
+tipoSujeto.label=Create property
+default.link.skip.label=Create property
+sujeto.label=Create property
