--- a/grails-app/i18n/messages_nb.properties
+++ b/grails-app/i18n/messages_nb.properties
@@ -53,4 +53,8 @@ typeMismatch.java.lang.Long=Feltet {0} må være et gyldig heltall
 typeMismatch.java.lang.Short=Feltet {0} må være et gyldig heltall
 typeMismatch.java.math.BigDecimal=Feltet {0} må være et gyldig tall
 typeMismatch.java.math.BigInteger=Feltet {0} må være et gyldig heltall
+tipoDenuncia.label=Create property
+tipoSujeto.label=Create property
+default.link.skip.label=Create property
+sujeto.label=Create property
 
