--- a/grails-app/i18n/messages_pl.properties
+++ b/grails-app/i18n/messages_pl.properties
@@ -57,3 +57,7 @@ typeMismatch.java.lang.Long=Właściwość {0} musi być poprawnyą liczbą
 typeMismatch.java.lang.Short=Właściwość {0} musi być poprawnyą liczbą
 typeMismatch.java.math.BigDecimal=Właściwość {0} musi być poprawnyą liczbą
 typeMismatch.java.math.BigInteger=Właściwość {0} musi być poprawnyą liczbą
+tipoDenuncia.label=Create property
+tipoSujeto.label=Create property
+default.link.skip.label=Create property
+sujeto.label=Create property
