--- a/grails-app/i18n/messages_ru.properties
+++ b/grails-app/i18n/messages_ru.properties
@@ -29,3 +29,7 @@ typeMismatch.java.lang.Long=Значение поля {0} не является 
 typeMismatch.java.lang.Short=Значение поля {0} не является допустимым числом
 typeMismatch.java.math.BigDecimal=Значение поля {0} не является допустимым числом
 typeMismatch.java.math.BigInteger=Значение поля {0} не является допустимым числом
+tipoDenuncia.label=Create property
+tipoSujeto.label=Create property
+default.link.skip.label=Create property
+sujeto.label=Create property
