--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -56,3 +56,5 @@ typeMismatch.java.math.BigInteger=La propiedad {0} debe ser un número válido
 depEstado.label=Create property
 tipoDenuncia.label=Create property
 default.link.skip.label=Create property
+city.label=Create property
+ciudad.label=Create property
