--- a/grails-app/i18n/messages_sk.properties
+++ b/grails-app/i18n/messages_sk.properties
@@ -57,3 +57,5 @@ typeMismatch=Položka {0} má nezhodný typ
 depEstado.label=Create property
 tipoDenuncia.label=Create property
 default.link.skip.label=Create property
+city.label=Create property
+ciudad.label=Create property
