--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -57,3 +57,5 @@ typeMismatch=Property {0} is type-mismatched
 depEstado.label=Create property
 tipoDenuncia.label=Create property
 default.link.skip.label=Create property
+city.label=Create property
+ciudad.label=Create property
