--- a/grails-app/i18n/messages_da.properties
+++ b/grails-app/i18n/messages_da.properties
@@ -56,4 +56,6 @@ typeMismatch.java.math.BigInteger=Feltet {0} skal være et valid tal
 depEstado.label=Create property
 tipoDenuncia.label=Create property
 default.link.skip.label=Create property
+city.label=Create property
+ciudad.label=Create property
 
