--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -56,3 +56,5 @@ typeMismatch.java.math.BigInteger=Die Eigenschaft {0} muss eine gültige Zahl se
 depEstado.label=Create property
 tipoDenuncia.label=Create property
 default.link.skip.label=Create property
+city.label=Create property
+ciudad.label=Create property
