--- a/grails-app/i18n/messages_sv.properties
+++ b/grails-app/i18n/messages_sv.properties
@@ -56,3 +56,5 @@ typeMismatch.java.math.BigInteger=Värdet {0} måste vara ett giltigt heltal
 depEstado.label=Create property
 tipoDenuncia.label=Create property
 default.link.skip.label=Create property
+city.label=Create property
+ciudad.label=Create property
