--- a/grails-app/i18n/messages_th.properties
+++ b/grails-app/i18n/messages_th.properties
@@ -56,3 +56,5 @@ typeMismatch.java.math.BigInteger=คุณสมบัติ '{0}' จะต้
 depEstado.label=Create property
 tipoDenuncia.label=Create property
 default.link.skip.label=Create property
+city.label=Create property
+ciudad.label=Create property
