casos_derivados_funcional

--- a/grails-app/i18n/messages_zh_CN.properties
+++ b/grails-app/i18n/messages_zh_CN.properties
@@ -1,3 +1,4 @@
+casosDerivados.label=Create property
 city.label=Create property
 ciudad.label=Create property
 default.blank.message=[{1}]\u7C7B\u7684\u5C5E\u6027[{0}]\u4E0D\u80FD\u4E3A\u7A7A
