--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -58,3 +58,4 @@ typeMismatch=Property {0} is type-mismatched
 tipoDenuncia.label=Tipo de Denuncia
 depEstado.label=Departamento del Estado
 ciudad.label=Ciudad
+casosDerivados.label=Create property
