--- a/grails-app/i18n/messages_cs.properties
+++ b/grails-app/i18n/messages_cs.properties
@@ -55,3 +55,4 @@ typeMismatch.java.math.BigDecimal=Položka {0} musí být validní číslo
 typeMismatch.java.math.BigInteger=Položka {0} musí být validní číslo
 
 tipoDenuncia.label=Tipo de Denuncia
+casosDerivados.label=Create property
