--- a/grails-app/i18n/messages_da.properties
+++ b/grails-app/i18n/messages_da.properties
@@ -55,3 +55,4 @@ typeMismatch.java.math.BigDecimal=Feltet {0} skal være et valid tal
 typeMismatch.java.math.BigInteger=Feltet {0} skal være et valid tal
 
 tipoDenuncia.label=Tipo de Denuncia
+casosDerivados.label=Create property
