--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -19,3 +19,4 @@ default.paginate.prev=Précédent
 default.paginate.next=Suivant
 
 tipoDenuncia.label=Tipo de Denuncia
+casosDerivados.label=Create property
