--- a/grails-app/i18n/messages_nb.properties
+++ b/grails-app/i18n/messages_nb.properties
@@ -55,3 +55,4 @@ typeMismatch.java.math.BigDecimal=Feltet {0} må være et gyldig tall
 typeMismatch.java.math.BigInteger=Feltet {0} må være et gyldig heltall
 
 tipoDenuncia.label=Tipo de Denuncia
+casosDerivados.label=Create property
