--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -65,3 +65,4 @@ tipoDenuncia.label=Create property
 tipoSujeto.label=Create property
 default.link.skip.label=Create property
 sujeto.label=Create property
+casosDerivados.label=Create property
