--- a/grails-app/i18n/messages_pt_BR.properties
+++ b/grails-app/i18n/messages_pt_BR.properties
@@ -59,3 +59,4 @@ typeMismatch.java.math.BigDecimal=O campo {0} deve ser um número válido.
 typeMismatch.java.math.BigInteger=O campo {0} deve ser um número válido.
 
 tipoDenuncia.label=Tipo de Denuncia
+casosDerivados.label=Create property
