--- a/grails-app/i18n/messages_cs.properties
+++ b/grails-app/i18n/messages_cs.properties
@@ -56,3 +56,4 @@ typeMismatch.java.math.BigInteger=Položka {0} musí být validní číslo
 
 tipoDenuncia.label=Tipo de Denuncia
 casosDerivados.label=Create property
+neighborhood.label=Create property
