--- a/grails-app/i18n/messages_da.properties
+++ b/grails-app/i18n/messages_da.properties
@@ -56,3 +56,4 @@ typeMismatch.java.math.BigInteger=Feltet {0} skal være et valid tal
 
 tipoDenuncia.label=Tipo de Denuncia
 casosDerivados.label=Create property
+neighborhood.label=Create property
