--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -56,3 +56,4 @@ typeMismatch.java.math.BigInteger=La propiedad {0} debe ser un número válido
 
 tipoDenuncia.label=Tipo de Denuncia
 casosDerivados.label=Create property
+neighborhood.label=Create property
