--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -20,3 +20,4 @@ default.paginate.next=Suivant
 
 tipoDenuncia.label=Tipo de Denuncia
 casosDerivados.label=Create property
+neighborhood.label=Create property
