--- a/grails-app/i18n/messages_it.properties
+++ b/grails-app/i18n/messages_it.properties
@@ -56,3 +56,4 @@ typeMismatch.java.math.BigInteger=La proprietà {0} deve essere un numero valido
 
 tipoDenuncia.label=Tipo de Denuncia
 casosDerivados.label=Create property
+neighborhood.label=Create property
