--- a/grails-app/i18n/messages_nb.properties
+++ b/grails-app/i18n/messages_nb.properties
@@ -56,3 +56,4 @@ typeMismatch.java.math.BigInteger=Feltet {0} må være et gyldig heltall
 
 tipoDenuncia.label=Tipo de Denuncia
 casosDerivados.label=Create property
+neighborhood.label=Create property
