--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -66,3 +66,4 @@ tipoSujeto.label=Create property
 default.link.skip.label=Create property
 sujeto.label=Create property
 casosDerivados.label=Create property
+neighborhood.label=Create property
