--- a/grails-app/i18n/messages_sk.properties
+++ b/grails-app/i18n/messages_sk.properties
@@ -55,3 +55,4 @@ typeMismatch.java.math.BigDecimal=Položka {0} musí byť desatinné číslo
 typeMismatch.java.math.BigInteger=Položka {0} musí byť celé číslo
 typeMismatch=Položka {0} má nezhodný typ
 casosDerivados.label=Create property
+neighborhood.label=Create property
