--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -56,3 +56,4 @@ typeMismatch.java.math.BigInteger=Die Eigenschaft {0} muss eine gültige Zahl se
 
 tipoDenuncia.label=Tipo de Denuncia
 casosDerivados.label=Create property
+neighborhood.label=Create property
