--- a/grails-app/i18n/messages_pt_PT.properties
+++ b/grails-app/i18n/messages_pt_PT.properties
@@ -35,4 +35,5 @@ typeMismatch.java.math.BigInteger=O campo {0} deve ser um número válido.
 
 tipoDenuncia.label=Tipo de Denuncia
 casosDerivados.label=Create property
+neighborhood.label=Create property
 
