--- a/grails-app/i18n/messages_sv.properties
+++ b/grails-app/i18n/messages_sv.properties
@@ -54,4 +54,5 @@ typeMismatch.java.lang.Short=Värdet {0} måste vara ett giltigt heltal
 typeMismatch.java.math.BigDecimal=Värdet {0} måste vara ett giltigt nummer
 typeMismatch.java.math.BigInteger=Värdet {0} måste vara ett giltigt heltal
 casosDerivados.label=Create property
+neighborhood.label=Create property
 
