Alex-agregar usuario

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -59,3 +59,4 @@ tipoDenuncia.label=Tipo de Denuncia
 depEstado.label=Departamento del Estado
 ciudad.label=Ciudad
 casosDerivados.label=Create property
+user.label=Usuario
