--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -55,6 +55,7 @@ typeMismatch.java.math.BigDecimal=La propiedad {0} debe ser un número válido
 typeMismatch.java.math.BigInteger=La propiedad {0} debe ser un número válido
 
 tipoDenuncia.label=Tipo de Denuncia
-casosDerivados.label=Create property
-neighborhood.label=Create property
+casosDerivados.label=Caso Derivado
+neighborhood.label=Barrio
 user.label=Usuario
+city.label=Ciudad
