--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -34,7 +34,7 @@ default.list.label=Lista de {0}
 default.add.label=Agregar {0}
 default.new.label=Nuevo {0}
 default.create.label=Crear {0}
-default.show.label=Mostrar {0}
+default.show.label=Detalles de {0}
 default.edit.label=Editar {0}
 
 default.button.create.label=Crear
@@ -59,3 +59,5 @@ casosDerivados.label=Caso Derivado
 neighborhood.label=Barrio
 user.label=Usuario
 city.label=Ciudad
+sujeto.label=Sujeto
+tipoSujeto.label=Tipo de Sujeto
