Denuncia en construccion

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -61,3 +61,5 @@ ciudad.label=Ciudad
 casosDerivados.label=Create property
 neighborhood.label=Create property
 user.label=Usuario
+denuncia.label=Denuncia
+denunciaEstado.label = Estado de denuncia
